[TinyMce] fixes img overflow

--- a/src/main/core/Resources/less/content/index.less
+++ b/src/main/core/Resources/less/content/index.less
@@ -7,3 +7,9 @@
 @import "overview";
 @import "resume";
 @import "rights";
+
+.text-html-content {
+  img {
+    max-width: 100%;
+  }
+}
